bin/jus/aoo/lisp/kernel/Reader.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */options{  static = false;}PARSER_BEGIN(Reader)package jus.aoo.lisp.kernel;
import java.io.*;

public class Reader {
  public static void main(String[] args) {
    try {
      while(true) {
        
    System.out.println(read());
  }
  } catch(ParseException e) {
		throw new LispException();
}
  }
/** le support de lecture */
protected static java.io.Reader in = new BufferedReader(new InputStreamReader(System.in));
protected static Reader parser = new Reader(in);
/** lecture d'une S-EXPR au terminal
* @return Sexpr : la Sexpr construite.
* @throws LispException une erreur de syntaxe
*/
public static Sexpr read() throws LispException, ParseException{
  try {

    	parser.ReInit(in);
		return parser.SEXPR();


} catch(ParseException e) {
		throw new LispException();
}

  }
/** lecture d'une S-EXPR à partir de la chaîne
* @param s : la chaîne
* @return Sexpr : la Sexpr construite.
* @throws LispException une erreur de syntaxe
*/
public static Sexpr read(String s) throws LispException{
	try {
	  java.io.Reader save = in;
	in = new StringReader(s);
	Sexpr r = read();
	in = save;
	return r;
}catch(ParseException e) {
		throw new LispException();
}
}
/** évaluation de la séquence S-EXPRs à partir du fichier s
* @param s : le nom du fichier
* @return Sexpr : symbole du nom du fichier.
* @throws LispException une erreur de lecture
*/
public static Sexpr importe(String s) throws LispException{
	
	
  return null; }
  protected static Sexpr quote(Sexpr s1) {
    return new Scons(Symbole.newSymbole("quote"),new Scons(s1,Nil.NIL));
  }
    
}PARSER_END(Reader)// les caractères ignorés
SKIP :
{
" " | "\t" | "\r"| "\n"
// attention élimine la notion de fin de ligne
| "\u0000" | "\u0001" | "\u0002" | "\u0003" | "\u0004" | "\u0005" | "\u0006" | "\u0007"
| "\u0008" | "\u000B" | "\u000C" | "\u000E" | "\u000F" | "\u0010" | "\u0011" | "\u0012"
| "\u0013" | "\u0014" | "\u0015" | "\u0016" | "\u0017" | "\u0018" | "\u0019" | "\u001A"
| "\u001B" | "\u001C" | "\u001D" | "\u001E" | "\u001F" | "\u007F"
}
MORE :
{
"//" : IN_SL_COMMENT
| "/*" : IN_ML_COMMENT
}
<IN_SL_COMMENT> SPECIAL_TOKEN :{<SL_COMMENT: "\n" | "\r" | "\r\n"> : DEFAULT}
<IN_ML_COMMENT> SPECIAL_TOKEN :{<ML_COMMENT: "*/" > : DEFAULT}
<IN_SL_COMMENT,IN_ML_COMMENT> SKIP :{< ~[] >}// les lexèmes du langageTOKEN : {
  //Definition des lexemes
  < #LETTRE : ["a"-"z"] | ["A"-"Z"] >
| < #NOMBRE : ["0"-"9"] >
| < PARG : "(" >
| < PARD : ")" >
| < QUOTE : "'" >
| < POINT : "." >
| < ID : (< LETTRE >|< NOMBRE >)+ >
}
//les règles de grammaire de ce langage
Sexpr SEXPRESSIONS() :{ Sexpr s1;}{
  (s1 = SEXPR() {s1.eval();})* < EOF >{return Symbole.newSymbole("fini");}
  < EOF >
}  Sexpr SEXPR() :{ Sexpr s1;}{
	s1 = ATOME() { return s1; }
|	< PARG > s1 = LISTE() < PARD > { return s1; }//() ou (SEXPR)
| 	< QUOTE > s1 = SEXPR() { return quote(s1); }

}
Sexpr LISTE() :{ Sexpr s1, s2;}{
  s1 = SEXPR()(< POINT > s2 = SEXPR() | s2 = LISTE()) { return new Scons(s1,s2); }
| {return Nil.NIL;}
}

Sexpr ATOME() :{ Sexpr s1;}{
  s1 = SYMBOLE() { return s1; }
    
}

Sexpr SYMBOLE(): { Token t; } { t=< ID > { return Symbole.newSymbole(t.image); } }
